--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,11 +1,5 @@
 development:
-  adapter: redis
-  url: redis://localhost:6379/1
-
-test:
-  adapter: test
+  adapter: enhanced_postgresql
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: rails_products_ai_production
+  adapter: enhanced_postgresql
